<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_Commands" Id="{c597b064-49bc-4346-815f-8b3955ae1cf6}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Commands :
(
	InsertIntoTable	 	:= 20,
	ClearTable 			:= 21,
	ReadAllfromTable	:= 22,
	CustomReadfromTable	:= 23,
	DropTable			:= 24
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>