<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_DB" Id="{f622115c-11e4-4507-9110-703a3ea9c482}">
    <Declaration><![CDATA[TYPE ST_DB :
STRUCT
	ID			: LINT;
	Timestamp	: DT;
	Name		: STRING;
	Value		: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>